[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kovamind"
version = "0.2.0"
description = "Python SDK for the Kova Mind memory API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Kova Mind", email = "hello@kovamind.ai" },
]
keywords = ["ai", "memory", "agents", "llm", "kovamind"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
    "responses>=0.23",
]

[project.urls]
Homepage = "https://kovamind.ai"
Documentation = "https://kovamind.ai/docs"
Repository = "https://github.com/KovaMind/python-sdk"
Issues = "https://github.com/KovaMind/python-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kovamind*"]
